# ml-utils

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
ml_utils/: backend.py  callbacks.py  evaluation.py  trainer.py
tests/ml_utils/: conftest.py  test_callbacks.py  test_evaluation.py  test_trainer.py
