[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_utils"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
  { name = "Suhas Shrinivasan", email = "suhasshrinivasan@gmail.com" }
]

[tool.setuptools.packages.find]
where = ["."]